# labrinth

./: .gitignore  .jiu.toml  Cargo.toml  README.md  openapi-generator.yml
.github/workflows/: release.yml
docs/: LABRINTH.md
labrinth/: Cargo.toml  README.md
labrinth/src/: lib.rs
labrinth/src/apis/: misc_api.rs  mod.rs  notifications_api.rs  projects_api.rs  tags_api.rs  teams_api.rs  threads_api.rs  users_api.rs  version_files_api.rs  versions_api.rs
labrinth/src/models/: auth_error.rs  base_project.rs  base_version.rs  category_tag.rs  creatable_project.rs  creatable_project_gallery_item.rs  creatable_report.rs  creatable_version.rs  donation_platform_tag.rs  editable_file_type.rs  editable_project.rs  editable_user.rs  editable_version.rs  file_type_enum.rs  forge_update_checker_promos.rs  forge_updates.rs  gallery_image.rs  game_version_tag.rs  get_latest_version_from_hash_body.rs  get_latest_versions_from_hashes_body.rs  hash_list.rs  invalid_input_error.rs  license.rs  license_tag.rs  loader_tag.rs  moderator_message.rs  modifiable_project.rs  modify_report_request.rs  modify_team_member_body.rs  non_search_project.rs  notification.rs  notification_action.rs  patch_projects_body.rs  project.rs  project_dependency_list.rs  project_donation_url.rs  project_identifier.rs  project_license.rs  project_result.rs  report.rs  (+17 more)
scripts/: generate-labrinth.sh  version.sh
src/: lib.rs  main.rs
template/: Cargo.mustache  README.mustache  lib.mustache  model.mustache  partial_header.mustache
template/reqwest/: api.mustache  (+1 more)
tests/: integration_test.rs
