[package]
name = "labrinth"
version = "0.1.0"
edition = "2024"
readme = "README.md"
description = "Generated Rust client for the Labrinth API"
keywords = []
categories = []
include = ["src", "README.md", "LICENSE"]
repository = "https://github.com/PRO-2684/labrinth"
license = "MIT"
authors = ["PRO-2684"]

[dependencies]

[profile.release]
debug = false     # Disable debug information in release builds.
strip = true      # Automatically strip symbols from the binary.
lto = true        # Enable link-time optimization.
codegen-units = 1 # Set the number of codegen units to 1.
