[package]
name = "labrinth"
version = "0.1.1"
description = "Generated Rust client for the Labrinth API"
edition = "2024"
repository = "https://github.com/PRO-2684/labrinth"
license = "MIT"
authors = ["PRO-2684"]
readme = "README.md"

[dependencies]
compio = { version = "0.19.0", features = ["macros"] }
cyper = { version = "0.9.0", features = ["json", "multipart", "stream"] }
http = "1.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_repr = "0.1.20"
serde_with = { version = "3.21.0", default-features = false, features = ["base64", "std", "macros"] }
url = "2.5.8"
